Muted unknown pragmas warning

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,7 +2,7 @@
 
 all: libpcm.a
 
-CXXFLAGS+= -Wall -O3 -std=c++0x
+CXXFLAGS+= -Wall -O3 -std=c++0x -Wno-unknown-pragmas
 vpath %.cpp ..
 
 libpcm.a: msr.o cpucounters.o pci.o client_bw.o utils.o
